# walrus

./: Cargo.toml  LICENSE  Makefile  README.md  WORKFLOW.md
.github/workflows/: ci.yml  k8s-test.yml
config/: pgiceberg.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  config_test.rs  error.rs  health.rs  lib.rs  metadata.rs  models.rs  models_test.rs  schema.rs  schema_test.rs  sql.rs  tls.rs
crates/common/tests/: test_backfill.rs  test_cdc.rs  test_crash_recovery.rs  test_ddl.rs
crates/common/tests/common/: mod.rs
crates/iceberg-writer/: Cargo.toml
crates/iceberg-writer/src/: backfill_processor.rs  catalog.rs  cdc_processor.rs  compaction.rs  ddl_handler.rs  ddl_handler_test.rs  duckdb_engine.rs  duckdb_engine_test.rs  main.rs  processor.rs  resync_processor.rs
crates/pgwire-replication/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
crates/pgwire-replication/examples/: basic.rs  bounded_replay.rs  checkpointed.rs  control_and_stream.rs  with_mtls.rs  with_tls.rs
crates/pgwire-replication/src/: config.rs  lib.rs
crates/pgwire-replication/src/client/: tokio_client.rs  worker.rs
crates/pgwire-replication/tests/: integration_postgres.rs
crates/wal-capture/: Cargo.toml
crates/wal-capture/src/: backfill.rs  backfill_test.rs  bootstrap.rs  cdc.rs  copy_export.rs  decoder.rs  decoder_test.rs  heartbeat.rs  main.rs  parquet_writer.rs  parquet_writer_test.rs  snapshot.rs  spill.rs  spill_test.rs
deploy/: docker-compose.yml
deploy/helm/: test-postgres.yaml
deploy/helm/walrus/: Chart.yaml  values.yaml
deploy/helm/walrus/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-iceberg-writer.yaml  namespace.yaml  pvc-staging.yaml  pvc-warehouse.yaml  secret.yaml  service-iceberg-writer.yaml  service-wal-capture.yaml  servicemonitor-iceberg-writer.yaml  servicemonitor-wal-capture.yaml  statefulset-wal-capture.yaml
deploy/k8s/: configmap.yaml  iceberg-writer.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  servicemonitor.yaml  wal-capture.yaml
deploy/k8s-test/: kustomization.yaml
deploy/tests/: e2e_k8s.sh  e2e_local.sh
docker/: Dockerfile  docker-compose.yml
scripts/: run_local.sh  setup_source_db.sql  test_k8s.sh
tests/integration/: test_backfill.rs  test_cdc.rs  test_crash_recovery.rs  test_ddl.rs
tests/integration/common/: mod.rs
