[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/datastx/walrus"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-protocol = "0.6"

# Logical replication
pgwire-replication = "0.2"

# Arrow / Parquet
arrow = { version = "57", features = ["prettyprint"] }
arrow-array = "57"
arrow-schema = "57"
arrow-cast = "57"
parquet = { version = "57", features = ["snap", "zstd"] }

# Iceberg
iceberg = { version = "0.8.0", features = ["storage-fs"] }
iceberg-catalog-sql = "0.8.0"

# DuckDB
duckdb = { version = "1.10500.0", features = ["bundled"] }

# SQL
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "any"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
byteorder = "1"

# Async
futures = "0.3"
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP (health checks)
axum = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# SQL parsing
sqlparser = "0.55"

# Error handling
anyhow = "1"
thiserror = "2"

# Testing
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
