[package]
name = "pgiceberg-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
deadpool-postgres = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rustls = { workspace = true }
tokio-postgres-rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-pki-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
