[package]
name = "pgiceberg-iceberg-writer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pgiceberg-iceberg-writer"
path = "src/main.rs"

[dependencies]
pgiceberg-common = { path = "../common" }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-sql = { workspace = true }
sqlx = { workspace = true }
duckdb = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
sqlparser = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
