[package]
name = "pgiceberg-wal-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pgiceberg-wal-capture"
path = "src/main.rs"

[dependencies]
pgiceberg-common = { path = "../common" }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
postgres-protocol = { workspace = true }
deadpool-postgres = { workspace = true }
pgwire-replication = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
backoff = { workspace = true }
rustls = { workspace = true }
tokio-postgres-rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-pki-types = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
